# files-explorer

./: .gitignore  CodeRules.md  LICENSE  README.md  README_EN.md  SKILL.md  index.html  package-lock.json  package.json  updater.json  vite.config.ts
.github/workflows/: publish.yml
docs/: RELEASE_CHECKLIST.md  auto-update-plan.md  user-manual-en.md  user-manual.md
public/: splashscreen.html
scripts/: bump-version.sh  copy-material-icons.cjs  functional_tests_standalone.rs  generate-icons.cjs  png-to-ico.cjs  sync-gitee.sh
skills/: AGENT.md  prompt.md
skills/references/: CLAUDE.md
src/: App.vue  i18n.ts  main.ts  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  clipboard.rs  compress.rs  drives.rs  error.rs  files.rs  lib.rs  main.rs  native_drag.rs  operations.rs  search.rs  state.rs  system.rs  tauri_setup.rs  terminal.rs  tray.rs  types.rs  undo.rs
src-tauri/src/commands/: app_cmd.rs  file_cmd.rs  mod.rs  system_cmd.rs
src-tauri/src/core/: error.rs  fs_helper.rs  logger.rs  mod.rs  state.rs  types.rs
src-tauri/src/platform/: fs_ext.rs  mod.rs  path.rs  system.rs  window.rs
src-tauri/src/platform/linux/: fs_impl.rs  mod.rs  path_impl.rs  system_impl.rs
src-tauri/src/platform/macos/: fs_impl.rs  mod.rs  path_impl.rs  system_impl.rs
src-tauri/src/platform/windows/: fs_impl.rs  mod.rs  path_impl.rs  system_impl.rs
src-tauri/src/utils/: encoding.rs  mod.rs  time.rs
src-tauri/tests/: functional_tests.rs
src/components/: Breadcrumb.vue  CodePreview.vue  ColumnContainer.vue  ColumnPane.vue  ContextMenu.vue  DetailsListView.vue  FileItem.vue  FileList.vue  GridView.vue  MarkdownPreview.vue  PaneNode.vue  PptxPreview.vue  PreviewWindow.vue  PropertiesPanel.vue  RibbonToolbar.vue  Sidebar.vue  StatusBar.vue  TerminalPanel.vue  ThisPcView.vue  TitleBar.vue  Toolbar.vue  TreeView.vue  UpdaterChecker.vue  VideoPreview.vue  XlsPreview.vue
src/components/Dialogs/: ClearCacheDialog.vue  DeleteConfirmDialog.vue  NewItemDialog.vue  RenameDialog.vue  SettingsDialog.vue
src/composables/: useContextMenu.ts  useDragDrop.ts  useFileActions.ts  useKeyboardShortcuts.ts  useNativeDrop.ts  usePanelNavigation.ts  useSearchService.ts  useToast.ts
src/locales/: en.ts  zh.ts
src/stores/: deleteStore.ts  fileStore.ts  navigationStore.ts  selectionStore.ts  settingsStore.ts  tabStore.ts  viewStore.ts
src/types/: dplayer.d.ts  index.ts
src/utils/: fileIcons.ts  fileTypes.ts  iconMap.ts  logger.ts  platform.ts  session.ts  tauri.ts  updater.ts  version.ts
