[package]
name = "files-explorer"
version = "0.1.5"
edition = "2021"

[lib]
name = "files_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "files-explorer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
trash = "3"
opener = "0.7"
log = "0.4"
simplelog = "0.12"
arboard = "3"
dirs = "6"
base64 = "0.22"
zip = "2"
tar = "0.4"
flate2 = "1"
bzip2 = "0.4"
xz2 = "0.1"
sevenz-rust = "0.6"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
